--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="complete">完成</string>
+    <string name="cuttingPictures">裁剪图片</string>
+    <string name="loading">加载中…</string>
+
 </resources>
